--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | DMTProject1</title>
+    <title>Unity WebGL Player | 1220</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">DMTProject1</div>
+        <div id="unity-build-title">1220</div>
       </div>
     </div>
     <script>
@@ -57,15 +57,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Road_final.loader.js";
+      var loaderUrl = buildUrl + "/0206crossroad.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Road_final.data",
-        frameworkUrl: buildUrl + "/Road_final.framework.js",
-        codeUrl: buildUrl + "/Road_final.wasm",
+        dataUrl: buildUrl + "/0206crossroad.data.unityweb",
+        frameworkUrl: buildUrl + "/0206crossroad.framework.js.unityweb",
+        codeUrl: buildUrl + "/0206crossroad.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "DMTProject1",
-        productVersion: "0.1",
+        productName: "1220",
+        productVersion: "0.1.0",
         showBanner: unityShowBanner,
       };
 
